--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,8 @@
         "request": "launch",
         "mode": "debug",
         "program": "${workspaceFolder}/",
-        "args": ["serve"]
+        "args": ["serve"],
+        "apiVersion": 1
       }
     ]
   }
